[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "paddle"
version = "0.1.0"
description = "Canoe's utility subroutines"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Cheng Li", email = "chengcli@umich.edu" }]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "torch>=2.7.0,<=2.7.1",
  "kintera>=1.0.1",
  "snapy>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/chengcli/paddle"
Repository = "https://github.com/chengcli/paddle"
Issues = "https://github.com/chengcli/paddle/issues"

[project.scripts]
paddle = "paddle.__main__:main"
